tests/params/compile-fail/default_out_of_range.rs
prgpu::params! {
	pub enum Params {
		#[slider(label = "A", range = 0.0..=1.0, default = 5.0)]
		A,
	}
}

fn main() {}
